<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App & Menu -->
    <string name="app_name">J\'y accède</string>
    <string name="addLocation">Add location</string>
    <string name="searchLocation">Search location</string>
    <string name="closerLocation">Place around</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="places">Places</string>
    <string name="stop">Stop points</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Error message -->
    <string name="error">Error</string>
    <string name="unknownLocationError">Unknown location</string>
    <string name="noConnectionError">An internet connection is required !</string>
    <string name="noCityError">City not found !</string>
    <string name="noLocationError">No place has been selected !</string>

    <!-- Add location activity -->
    <string name="title_activity_add_location">Add location</string>
    <string name="address">Address</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="remark">Remark</string>
    <string name="add">Add</string>
    <string name="locationPost">Location added</string>

    <!-- Closer location activity -->
    <string name="title_activity_search_location">Search location</string>
    <string name="search">Search</string>
    <string name="withPmr">With up disabled</string>

    <string-array name="category_location">
        <item>All</item>
        <item>Bar</item>
        <item>Restaurant</item>
    </string-array>

    <!-- Map activity -->
    <string name="title_activity_maps">Maps</string>
    <string name="here">I am here !</string>
    <string name="go">Go !</string>
    <string name="title_activity_update_line">UpdateLineActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
