<GridLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:columnCount="3"
    android:rowCount="6">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_column="0"
        android:layout_row="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputAddress"
        android:layout_column="1"
        android:layout_row="0" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withPmr"
        android:id="@+id/checkBox"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="2"
        android:enabled="false"
        android:checked="true" />

    <Button
        android:id="@+id/addLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_row="2" />

</GridLayout>