<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="visitmycityandroid.activity.SearchLocationActivity"
    android:columnCount="2"
    android:rowCount="4">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_column="0"
        android:layout_row="0" />

    <EditText
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:id="@+id/inputAddress"
        android:layout_column="1"
        android:layout_row="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:layout_column="0"
        android:layout_row="1" />

    <EditText
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:id="@+id/inputLatitude"
        android:inputType="numberDecimal"
        android:layout_column="1"
        android:layout_row="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:layout_column="0"
        android:layout_row="2" />

    <EditText
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:id="@+id/inputLongitude"
        android:inputType="numberDecimal"
        android:layout_column="1"
        android:layout_row="2" />

    <Button
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/search"
        android:id="@+id/searchButton"/>

</GridLayout>
