<GridLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:columnCount="3"
    android:rowCount="6">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_column="0"
        android:layout_row="0" />

    <EditText
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:id="@+id/inputName"
        android:layout_column="1"
        android:layout_row="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:layout_column="0"
        android:layout_row="1" />

    <EditText
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:id="@+id/inputLatitude"
        android:inputType="numberDecimal"
        android:layout_column="1"
        android:layout_row="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:layout_column="0"
        android:layout_row="2" />

    <EditText
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:id="@+id/inputLongitude"
        android:inputType="numberDecimal"
        android:layout_column="1"
        android:layout_row="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remark"
        android:layout_column="0"
        android:layout_row="3" />

    <EditText
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/inputRemarque"
        android:layout_column="1"
        android:layout_row="3" />

    <Button
        android:id="@+id/addLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_row="4" />

</GridLayout>